k8s/sample/sample-httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store-external
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
      namespace: gw-infra
  rules:
    - backendRefs:
        - name: store-v1
          port: 8080
    - matches:
        - headers:
            - name: env
              value: canary
      backendRefs:
        - name: store-v2
          port: 8080
    - matches:
        - path:
            value: /de
      backendRefs:
        - name: store-german
          port: 8080
